--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="app.js"></script>
   </head>
   
-<body ng-app="lunchCheck">
+<body ng-app="LunchCheck">
    <div class="container" ng-controller="LunchCheckController">
      <h1>Lunch Checker</h1>
 
@@ -21,7 +21,7 @@
              class="form-control" ng-model="dishes">
          </div>
          <div class="form-group">
-             <button class="btn btn-default" ng-click="numDishes()">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="checkDishes()">Check If Too Much</button>
          </div>
          <div class="form-group message">
            {{message}}
