--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   
 <body ng-app="LunchCheck">
-   <div class="container" ng-controller="LunchCheckController">
+   <div class="container" ng-controller="ControllerLunchCheck">
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
